cambio de nombre

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="resume">
         <div class="left-section">
           <img src="./img/sebastian.png" alt="Sebastian" class="profile-pic">
-          <h1>Frank Sebastián Condori Carvajal</h1>
+          <h1>Sebastián Condori Carvajal</h1>
           <h2>Student</h2>
           <div class="contact"> 
             <h3>Contact</h3>
